paginates and filters data based on the client side criteria